@@ -3,27 +3,27 @@ package com.example.ChatApp.service.impl;
 import com.example.ChatApp.dto.UserResponse;
 import com.example.ChatApp.exception.ResourceNotFoundException;
 import com.example.ChatApp.mapper.UserMapper;
-import com.example.ChatApp.model.User;
+import com.example.ChatApp.entity.User;
 import com.example.ChatApp.repository.UserRepository;
 import com.example.ChatApp.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
+    private final UserMapper userMapper;
 
     @Override
     public List<UserResponse> getAllUsers() {
         return userRepository.findAll()
                 .stream()
-                .map(UserMapper::mapToUserDTO)
-                .collect(Collectors.toList());
+                .map(userMapper::toResponse)
+                .toList();
     }
 
     @Override
@@ -31,15 +31,15 @@ public class UserServiceImpl implements UserService {
         User user = userRepository.findById(id)
                 .orElseThrow(() ->
                         new ResourceNotFoundException("User not found with id: " + id));
-        return UserMapper.mapToUserDTO(user);
+
+        return userMapper.toResponse(user);
     }
 
     @Override
     public UserResponse createUser(UserResponse dto) {
-        User user = UserMapper.mapToUser(dto);
-        return UserMapper.mapToUserDTO(
-                userRepository.save(user)
-        );
+        User user = userMapper.toEntity(dto);
+        user = userRepository.save(user);
+        return userMapper.toResponse(user);
     }
 
     @Override
@@ -48,7 +48,7 @@ public class UserServiceImpl implements UserService {
                 .orElseThrow(() ->
                         new ResourceNotFoundException("User not found with id: " + id));
 
-        user.setId(dto.getId());
+        // update field
         user.setUsername(dto.getUsername());
         user.setEmail(dto.getEmail());
         user.setRole(dto.getRole());
@@ -56,12 +56,8 @@ public class UserServiceImpl implements UserService {
         user.setAvatarUrl(dto.getAvatarUrl());
         user.setLastSeen(dto.getLastSeen());
         user.setStatus(dto.getStatus());
-        user.setCreatedAt(dto.getCreatedAt());
 
-        return UserMapper.mapToUserDTO(
-                userRepository.save(user)
-        );
+        user = userRepository.save(user);
+        return userMapper.toResponse(user);
     }
-
 }
-
